services/deployment/k8s/phishing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phishing-detection
  labels:
    app: phishing-detection
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phishing-detection
  template:
    metadata:
      labels:
        app: phishing-detection
    spec:
      containers:
        - name: phishing-detection
          image: phishing-detection:1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
