services/deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guardstone-console
  namespace: default
  labels:
    app: guardstone-console
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: guardstone-console
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
